add placeholders for visualized content
Also needed to make things a little more bootstrappy

--- a/protoApp/app/campaign.html
+++ b/protoApp/app/campaign.html
@@ -25,22 +25,54 @@
 	</head>
 
 	<body>
-		<section class="campaignSection" id="pageheader">
-			<h1>CAMPAIGN</h1>
-			<div>Social media widgets go here.</div>
-		</section>		
-		<section class="campaignSection" id="whoisgiving">
-			<h2>Who is giving?</h2>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 textleft">
+					<h1>CAMPAIGN</h1>
+				</div>
+				<div class="col-md-6 textright">
+					<div>Social media widgets go here.</div>
+				</div>
+				<div class="row">
+					The Raised vs. Spent widget goes here.
+				</div>
+			</div>		
+
+			<div class="row">
+				<h2>Who is giving?</h2>
+				<div class="row">
+					The big who-is-giving bar graph goes here.
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						Top Individual Donors widget goes here.
+					</div>
+					<div class="col-md-6">
+						Top Business Donors widget goes here.
+					</div>
+				</div>
+			</div>
 			
-		</section>
-		<section class="campaignSection" id="moneyflow">
-			<h2>How does the money flow?</h2>
-		</section>
-		<section class="campaignSection" id="raisingvsspending">
-			<h2>When are they raising and spending?</h2>
-		</section>
-		<section class="campaignSection" id="local">
-			<h2>Is the money local?</h2>
-		</section>
+			<div class="row">
+				<h2>How does the money flow?</h2>
+				<div class="row">
+					Money flow visualization goes here.
+				</div>
+			</div>
+
+			<div class="row">
+				<h2>When are they raising and spending?</h2>
+				<div class="row">
+					Raise-spend visualization goes here.
+				</div>
+			</div>
+
+			<div class="row">
+				<h2>Is the money local?</h2>
+				<div class="row">
+					Flow-of-money-over-time visualization goes here.
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
