--- a/protoApp/app/campaign.html
+++ b/protoApp/app/campaign.html
@@ -10,7 +10,7 @@
 	    <link rel="shortcut icon" href="/favicon.ico">
 	    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 	    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
+	   	
 	    <!-- build:css(.) styles/vendor.css -->
 	    <!-- bower:css -->
 	    <!-- endbower -->
@@ -19,9 +19,24 @@
 	    <link rel="stylesheet" href="styles/main.css">
 	    <!-- endbuild -->
 	    <!-- build:js scripts/vendor/modernizr.js -->
-	    <script src="/bower_components/modernizr/modernizr.js"></script>
+	    <script id="csv" type="text/csv">DonorType,Amount (mill)
+			PAC, 78.3
+			Business, 89.9
+			Large Donors, 37.6
+			Grass Roots, 38.8
+			Party, 2.9
+		</script>
+		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	    <script src="/bower_components/modernizr/modernizr.js"></script>	    
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+	    <script src="scripts/whoIsGivingChart.js"></script>
 	    <!-- endbuild -->
-	    
+	
+		<script type="text/javascript">
+			$(document).ready(function () {
+				renderWhoIsGivingChart();
+			});			
+		</script>
 	</head>
 
 	<body>
@@ -42,6 +57,7 @@
 				<h2>Who is giving?</h2>
 				<div class="row">
 					The big who-is-giving bar graph goes here.
+					<div id="whoIsGivingChart"></div>
 				</div>
 				<div class="row">
 					<div class="col-md-6">
