started using dimple instead of plain ol d3.
Not quite working yet though.

--- a/protoApp/app/campaign.html
+++ b/protoApp/app/campaign.html
@@ -20,7 +20,7 @@
 	    <!-- endbuild -->
 	    <!-- build:js scripts/vendor/modernizr.js -->
 	    <script id="csv" type="text/csv">DonorType,Amount (mill)
-			PAC, 78.3
+			PAC, 78.3	
 			Business, 89.9
 			Large Donors, 37.6
 			Grass Roots, 38.8
@@ -29,6 +29,7 @@
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	    <script src="/bower_components/modernizr/modernizr.js"></script>	    
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+	    <script src="http://dimplejs.org/dist/dimple.v2.1.6.min.js"></script>
 	    <script src="scripts/whoIsGivingChart.js"></script>
 	    <!-- endbuild -->
 	
@@ -55,8 +56,7 @@
 
 			<div class="row">
 				<h2>Who is giving?</h2>
-				<div class="row">
-					The big who-is-giving bar graph goes here.
+				<div class="row">					
 					<div id="whoIsGivingChart"></div>
 				</div>
 				<div class="row">
